# weather-api

./: Dockerfile  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
integrations/: accuweather.py
tests/: test_api.py  test_integrations.py
weather/: models.py  serializers.py  urls.py  views.py
weather_api_svc/: asgi.py  settings.py  urls.py  wsgi.py
